--- a/zephyr/CMakeLists.txt
+++ b/zephyr/CMakeLists.txt
@@ -1,8 +1,8 @@
 if(CONFIG_LIBCUSTOM)
-  zephyr_library_named(custom)
-  zephyr_include_directories(../include)
+  #zephyr_library_named(custom)
+  #zephyr_include_directories(../include)
 
-  #add_subdirectory(.. build)
-  #set_property(GLOBAL APPEND PROPERTY ZEPHYR_INTERFACE_LIBS custom)
+  add_subdirectory(.. build)
+  set_property(GLOBAL APPEND PROPERTY ZEPHYR_INTERFACE_LIBS custom)
 
 endif()
